# Cajander

./: .gitignore  CMakeLists.txt  __init__.py  default_biomes.json  metadata.txt
core/: CMakeLists.txt
docs/: Prompts.md  UI Graph.md
docs/.obsidian/: workspace.json
domain/: CMakeLists.txt  biome.h
gui/: CMakeLists.txt  mainDialog.cpp  mainDialog.h
gui/classification/: classificationTab.cpp  classificationTab.h
gui/classification/biomeEditor/: biomeEditor.cpp  biomeEditor.h  biomeItemDelegate.cpp  biomeItemDelegate.h  biomeTableModel.cpp  biomeTableModel.h
gui/classification/biomeExporter/: biomeExporter.cpp  biomeExporter.h
gui/classification/biomeLoader/: biomeLoader.cpp  biomeLoader.h
gui/classification/biomeSelector/: biomeListModel.cpp  biomeListModel.h  biomeLoader.cpp  biomeLoader.h  biomeModel.cpp  biomeModel.h  biomeSelector.cpp  biomeSelector.h
gui/data/: dataTab.cpp  dataTab.h
gui/help/: helpTab.cpp  helpTab.h
gui/processing/: processingTab.cpp  processingTab.h
gui/utils/: uiUtils.h
include/gui/: mainDialog.h
infrastructure/: CMakeLists.txt  pluginContext.cpp  pluginContext.h
infrastructure/biomes/: jsonBiomeStorage.cpp  jsonBiomeStorage.h
plugin/: CMakeLists.txt  plugin.cpp
services/: CMakeLists.txt
services/biomes/: biomeRepository.cpp  biomeRepository.h  ibiomeStorage.h
src/: main.cpp
src/gui/: mainDialog.cpp
